Refactor mhcCategoryList directive
#8796 - As a Patient, I am able to distinguish between categories that are driven by Federal and State jurisdictional privacy policy rules

--- a/client/app/consent/directives/categoryList.html
+++ b/client/app/consent/directives/categoryList.html
@@ -7,7 +7,7 @@
     </label>
     <span class="text-strong-blue m-l-xs">
         <mhc-popover popover-placement="bottom"
-                     popover-title="bindObj.displayName"
-                     popover-content="bindObj.description"></mhc-popover>
+                     popover-title="bindTitle"
+                     popover-content="bindContent"></mhc-popover>
     </span>
 </div>
