--- a/client/app/consent/directives/consentPurposeOfUseModal.html
+++ b/client/app/consent/directives/consentPurposeOfUseModal.html
@@ -4,18 +4,23 @@
     </div>
     <div class="modal-body">
         <div></div>
-        <div class="alert alert-warning"> Share my information <strong>only</strong> for specified purposes of use. </div>
-        <button class="btn btn-primary btn-xs dark-green" ng-click="purposeOfUseModalVm.selectAll(purposeOfUseModalObj)">Select All</button> <button class="btn btn-primary btn-xs dark-green" ng-click="purposeOfUseModalVm.deselectAll(purposeOfUseModalObj)">Deselect All</button>
+        <div class="alert alert-warning"> Share my information <strong>only</strong> for specified purposes of use.
+        </div>
+        <button class="btn btn-primary btn-xs dark-green"
+                ng-click="purposeOfUseModalVm.selectAll(purposeOfUseModalObj)">Select All
+        </button>
+        <button class="btn btn-primary btn-xs dark-green"
+                ng-click="purposeOfUseModalVm.deselectAll(purposeOfUseModalObj)">Deselect All
+        </button>
         <div class="row">
             <div class="col-sm-6">
                 <div ng-repeat="purposeOfUse in purposeOfUseModalVm.data">
-                    <div >
-                        <div class="radio">
-                            <label>
-                                <input type="checkbox" pp-icheck  checklist-model="purposeOfUseModalVm.consent.selectedPurposeOfUseCodes" checklist-value="purposeOfUse.code"  >
-                                <span class="m-l-xs" ng-bind="purposeOfUse.displayName"></span>
-                            </label>
-                        </div>
+                    <div>
+                        <mhc-category-list
+                                category-model="purposeOfUseModalVm.consent.selectedPurposeOfUseCodes"
+                                category-obj="purposeOfUse"
+                                category-title="purposeOfUse.displayName"
+                                category-content="sensitivityPolicy.description"></mhc-category-list>
                     </div>
                 </div>
             </div>
@@ -23,6 +28,8 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-white m-r-xs" ng-click="purposeOfUseModalVm.cancel()">Cancel</button>
-        <button type="button" class="btn btn-primary dark-green" ng-click="purposeOfUseModalVm.ok()" ng-disabled="purposeOfUseModalObj.$pristine">Save changes</button>
+        <button type="button" class="btn btn-primary dark-green" ng-click="purposeOfUseModalVm.ok()"
+                ng-disabled="purposeOfUseModalObj.$pristine">Save changes
+        </button>
     </div>
 </div>
