--- a/client/app/consent/directives/consentCreateEdit.html
+++ b/client/app/consent/directives/consentCreateEdit.html
@@ -15,7 +15,7 @@
             <div class="hr-line-dashed"></div>
             <div class="row">
                 <div class="col-md-11">
-                    <pp-consent-medical-information ng-model="consentCreateVm.medicalInformation" name="medicalInformation" medicalsections="consentCreateVm.medicalsections" sensitivitypolicies="consentCreateVm.sensitivitypolicies"></pp-consent-medical-information>
+                    <pp-consent-medical-information ng-model="consentCreateVm.medicalInformation" name="medicalInformation" sensitivitypolicies="consentCreateVm.sensitivitypolicies"></pp-consent-medical-information>
                 </div>
             </div>
             <div class="hr-line-dashed"></div>
