Style and html edits for Federal and State Categories on Sensitive Information Categories Display
#8796 - As a Patient, I am able to distinguish between categories that are driven by Federal and State jurisdictional privacy policy rules

--- a/client/app/consent/directives/categoryList.html
+++ b/client/app/consent/directives/categoryList.html
@@ -5,7 +5,7 @@
                checklist-value="bindObj.code">
         <span class="m-l-xs" ng-bind="bindObj.displayName"></span>
     </label>
-    <span class="text-strong-blue m-l-xs">
+    <span class="text-navy-blue m-l-xs">
         <mhc-popover popover-placement="bottom"
                      popover-title="bindTitle"
                      popover-content="bindContent"></mhc-popover>
