--- a/client/app/consent/directives/consentMedicalInformationModal.html
+++ b/client/app/consent/directives/consentMedicalInformationModal.html
@@ -24,9 +24,9 @@
                             Deselect All
                         </button>
                         <div>
-                            <div class="border-bottom p-xxs m-t-sm m-b-xs text-dark-blue">
+                            <div class="border-bottom p-xxs m-t-sm m-b-xs text-dark-blue fw-600">
                                 <span class="fa fa-university m-r-xxs"></span>
-                                <em>Federal Categories</em>
+                                Federal Categories
                             </div>
                             <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | orderBy:'displayOrder'">
                                 <div ng-if="sensitivityPolicy.federal">
@@ -39,9 +39,9 @@
                             </div>
                         </div>
                         <div>
-                            <div class="border-bottom p-xxs m-t-sm m-b-xs text-dark-blue">
-                                <span class="fa fa-flag m-r-xxs"></span>
-                                <em>State Categories</em>
+                            <div class="border-bottom p-xxs m-t-sm m-b-xs text-dark-blue fw-600">
+                                <span class="fa fa-flag m-r-xs"></span>
+                                State Categories
                             </div>
                             <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | orderBy:'displayOrder'">
                                 <div ng-if="!sensitivityPolicy.federal">
