Enable to show the description for purpose of use
#8796 - As a Patient, I am able to distinguish between categories that are driven by Federal and State jurisdictional privacy policy rules

--- a/client/app/consent/directives/consentPurposeOfUseModal.html
+++ b/client/app/consent/directives/consentPurposeOfUseModal.html
@@ -20,7 +20,7 @@
                                 category-model="purposeOfUseModalVm.consent.selectedPurposeOfUseCodes"
                                 category-obj="purposeOfUse"
                                 category-title="purposeOfUse.displayName"
-                                category-content="sensitivityPolicy.description"></mhc-category-list>
+                                category-content="purposeOfUse.description"></mhc-category-list>
                     </div>
                 </div>
             </div>
