Enable to close popover when clicking outside
#8796 - As a Patient, I am able to distinguish between categories that are driven by Federal and State jurisdictional privacy policy rules

--- a/client/app/account/controllers/createPassword.html
+++ b/client/app/account/controllers/createPassword.html
@@ -1,4 +1,4 @@
-<div class="container-fluid page-bg-white">
+<div class="container-fluid page-bg-white" mhc-popover-close>
 
     <nav class="navbar navbar-fixed-top height-60 gray-bg border-bottom" role="navigation">
         <div class="container-fluid">
