--- a/client/app/consent/directives/consentPurposeOfUseModal.html
+++ b/client/app/consent/directives/consentPurposeOfUseModal.html
@@ -1,4 +1,4 @@
-<div class="inmodal" ng-form name="purposeOfUseModalObj">
+<div class="inmodal" ng-form name="purposeOfUseModalObj" mhc-popover-close>
     <div class="modal-header">
         <h4 class="modal-title">Share for selected purpose only</h4>
     </div>
