Edits to html to fix responsive issues in Patient Activation workflow.
#8801-As a Developer, I will have fixed issues in MHC in order to make the system more stable and reliable

--- a/client/app/account/controllers/activationError.html
+++ b/client/app/account/controllers/activationError.html
@@ -1,8 +1,8 @@
-<div class="container-fluid page-bg-white">
+<div id="wrapper" class="container-fluid page-bg-white">
 
     <nav class="navbar navbar-fixed-top height-60 gray-bg border-bottom" role="navigation">
         <div class="container-fluid">
-            <div class="row ">
+            <div class="row">
                 <div class="col-sm-12">
                     <div class="navbar-header">
                         <div class="m-t-md m-l inline">
@@ -24,18 +24,20 @@
         </div>
     </nav>
 
-    <div class="padding-top-60">
+    <div id="page-wrapper "class="padding-top-60 m-b-lg m-l-none m-r-none">
 
         <div class="row">
             <div class="col-sm-offset-1 col-sm-10">
                 <h1> Sorry! Activation Code Expired! </h1>
-                <p><strong>We're very sorry. This email link is no longer valid.</strong> Please contact your provider for a new Verification Code.</p>
-                <p class="m-t-md">Please click the link below for more information about MyHealthCompass available on the MHC Login Page.</p>
+                <div class="m-t-md">
+                    <p><strong>We're very sorry. This email link is no longer valid.</strong> Please contact your provider for a new Verification Code.</p>
+                    <p class="m-t-md">Please click the link below for more information about MyHealthCompass available on the MHC Login Page.</p>
+                </div>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-offset-1 col-sm-10">
+            <div class="col-sm-offset-1 col-sm-10 m-t-md">
                 <a class="btn btn-primary dark-green" ui-sref="fe.login">
                     Back to Login Page
                 </a>
