--- a/client/app/account/controllers/userAccountVerification.html
+++ b/client/app/account/controllers/userAccountVerification.html
@@ -1,4 +1,4 @@
-<div class="container-fluid page-bg-white">
+<div id="wrapper" class="container-fluid page-bg-white">
     <nav class="navbar navbar-fixed-top height-60 gray-bg border-bottom" role="navigation">
         <div class="container-fluid">
             <div class="row ">
@@ -23,7 +23,7 @@
         </div>
     </nav>
 
-    <div class="padding-top-60">
+    <div id="page-wrapper "class="padding-top-60 m-b-lg m-l-none m-r-none">
         <section>
             <div class="row">
                 <div class="col-sm-offset-1 col-sm-10">
