--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -30,8 +30,14 @@
                             <input id="password" type="password" class="form-control relative" name="password"
                                    placeholder="Password" ng-model="createPasswordVm.patient.password"
                                    mhc-validate-password required>
-                                <span class="text-strong-blue absolute" style="top: 5px; right: -2px;">
+                                <span class="text-strong-blue absolute hidden-xs" style="top: 4px; right: 0px;">
                                     <mhc-popover popover-placement="right"
+                                                 popover-title="createPasswordVm.popoverData.title"
+                                                 popover-content="createPasswordVm.popoverData"></mhc-popover>
+                                </span>
+
+                                <span class="text-strong-blue absolute visible-xs" style="top: 4px; right: 24px;">
+                                    <mhc-popover popover-placement="left"
                                                  popover-title="createPasswordVm.popoverData.title"
                                                  popover-content="createPasswordVm.popoverData"></mhc-popover>
                                 </span>
