Implement the modal authenticatication in the esignature page.
#8795 - As a patient, for signing a consent, I will be able to use a checkbox attestation feature

--- a/client/app/consent/directives/consentESignature.html
+++ b/client/app/consent/directives/consentESignature.html
@@ -112,7 +112,7 @@
         <div class="col-md-12">
             <div class="pull-right">
                 <button class="btn btn-white m-r" ui-sref="fe.consent.list">Cancel</button>
-                <button class="btn btn-primary dark-green" type="submit" ng-disabled="!consentESignatureVm.patient.acceptTerms">Sign</button>
+                <button class="btn btn-primary dark-green" type="submit" ng-disabled="!consentESignatureVm.patient.acceptTerms" ng-click="consentESignatureVm.openAuthenticateModal()">Sign</button>
             </div>
         </div>
     </div>
