--- a/client/app/consent/controllers/consenteSignature.html
+++ b/client/app/consent/controllers/consenteSignature.html
@@ -1,5 +1,5 @@
 <pp-content-wrapper contenttitle="eSignature">
-    <pp-consent-e-signature></pp-consent-e-signature>
+    <pp-consent-e-signature attestation="consentESignatureVm.attestation"></pp-consent-e-signature>
 </pp-content-wrapper>
 
 
