--- a/client/app/consent/directives/consentESignature.html
+++ b/client/app/consent/directives/consentESignature.html
@@ -3,20 +3,18 @@
         <div class="row">
             <div class="col-sm-12">
                 <h2 class="m-t-none"><strong>Consent to Share My Medical Information</strong></h2>
-                <div>
-                    <span>Created on:</span>
-                    <strong><span ng-bind="consentESignatureVm.patient.createdDate"></span></strong>
-                </div>
                 <div class="">
                     <p class="m-b-xxs">Consent Reference Number:</p>
-                    <p><strong ng-bind="consentESignatureVm.patient.consentReferenceNumber"></strong></p>
+                    <p><strong ng-bind="consentESignatureVm.attestation.consentReferenceNumber"></strong></p>
                 </div>
             </div>
             <div class="col-sm-6">
-                <span> Patient Name:</span> <strong><span ng-bind="consentESignatureVm.patient.name"></span></strong>
+                <span> Patient Name:</span>
+                <strong ng-bind="consentESignatureVm.attestation | fullName"></strong>
             </div>
             <div class="col-sm-6">
-                <span> Patient DOB:</span> <strong><span ng-bind="consentESignatureVm.patient.dob"></span></strong>
+                <span> Patient DOB:</span>
+                <strong ng-bind="consentESignatureVm.attestation.patientDateOfBirth"></strong>
             </div>
         </div>
         <br/>
@@ -27,19 +25,19 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <p>Provider Name</p>
-                        <p ><strong ng-bind="consentESignatureVm.patient.authrizeProviderName"></strong></p>
+                        <p ><strong ng-bind="consentESignatureVm.authorizeProvider | fullName"></strong></p>
                     </div>
                     <div class="col-sm-3">
                         <p>NPI Number</p>
-                        <p > <strong ng-bind="consentESignatureVm.patient.authorizeProviderNPI"></strong></p>
+                        <p > <strong ng-bind="consentESignatureVm.authorizeProvider.npi"></strong></p>
                     </div>
                     <div class="col-sm-3">
                         <p>Address</p>
-                        <p > <strong ng-bind="consentESignatureVm.patient.authorizeProviderAddress"></strong></p>
+                        <p > <strong ng-bind="consentESignatureVm.authorizeProvider | address"></strong></p>
                     </div>
                     <div class="col-sm-3">
                         <p>Phone</p>
-                        <p > <strong ng-bind="consentESignatureVm.patient.authorizeProviderTelephone"></strong></p>
+                        <p > <strong ng-bind="consentESignatureVm.authorizeProvider.mailingAddressTelephoneNumber"></strong></p>
                     </div>
                 </div>
                 <br/>
@@ -47,22 +45,22 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <p>Provider Name</p>
-                        <p > <strong ng-bind="consentESignatureVm.patient.discloseProviderName"></strong></p>
+                        <p > <strong ng-bind="consentESignatureVm.disclosureProvider | fullName"></strong></p>
                     </div>
                     <div class="col-sm-3">
                         <p>NPI Number</p>
-                        <p > <strong ng-bind="consentESignatureVm.patient.discloseProviderNPI"></strong></p>
+                        <p > <strong ng-bind="consentESignatureVm.disclosureProvider.npi"></strong></p>
                     </div>
                     <div class="col-sm-3">
                         <p>Address</p>
-                        <p > <strong ng-bind="consentESignatureVm.patient.discloseProviderAddress"></strong></p>
+                        <p > <strong ng-bind="consentESignatureVm.disclosureProvider | address"></strong></p>
                     </div>
                     <div class="col-sm-3">
                         <p>Phone</p>
-                        <p > <strong ng-bind="consentESignatureVm.patient.discloseProviderTelephone"></strong></p>
+                        <p > <strong ng-bind="consentESignatureVm.disclosureProvider.mailingAddressTelephoneNumber"></strong></p>
                     </div>
                 </div>
-            </div>
+            </div>;
         </div>
 
         <div class="row">
@@ -72,13 +70,13 @@
                     <h4> <strong>To SHARE the following medical information:</strong></h4>
                     <strong>Sensitivity Categories:</strong>
                     <ul>
-                        <li ng-repeat="category in consentESignatureVm.patient.sensitiveCategories"> <span ng-bind="category.displayName"></span></li>
+                        <li ng-repeat="category in consentESignatureVm.attestation.doNotShareSensitivityPolicyDisplayNames"> <span ng-bind="category"></span></li>
                     </ul>
                 </div>
                 <div class="col-sm-6">
                     <h4><strong>To SHARE for the following purpose(s):</strong></h4>
                     <ul>
-                        <li ng-repeat="purposeOfUse in consentESignatureVm.patient.purposeOfUses"> <span ng-bind="purposeOfUse.displayName"></span></li>
+                        <li ng-repeat="purposeOfUse in consentESignatureVm.attestation.purposeOfUseCodes"> <span ng-bind="purposeOfUse.displayName"></span></li>
                     </ul>
                 </div>
             </div>
@@ -87,7 +85,7 @@
             <div class="col-sm-12">
                 <div class="alert alert-info navbar-blue p-xs"><strong>CONSENT TERMS</strong></div>
                 <p>
-                    I, <strong ng-bind="consentESignatureVm.patient.name"></strong>, understand that my records are protected under the federal regulations governing Confidentiality of
+                    I, <strong ng-bind="consentESignatureVm.attestation | fullName"></strong>, understand that my records are protected under the federal regulations governing Confidentiality of
                     Alcohol and Drug Abuse Patient Records, 42 CFR part 2, and cannot be disclosed without my written permission or
                     as otherwise permitted by 42 CFR part 2. I also understand that I may revoke this consent at any time except to the
                     extent that action has been taken in reliance on it, and that any event this consent expires automatically as follows:
@@ -95,17 +93,17 @@
             </div>
             <div class="col-sm-4">
                 <span><strong>Effective Date:</strong></span>
-                <strong ng-bind="consentESignatureVm.patient.effectiveDate"></strong>
+                <strong ng-bind="consentESignatureVm.attestation.consentStart | date: 'MM/dd/yyyy' "></strong>
             </div>
             <div class="col-sm-4">
                 <span><strong>Expiration Date:</strong></span>
-                <strong ng-bind="consentESignatureVm.patient.expirationDate"></strong>
+                <strong ng-bind="consentESignatureVm.attestation.consentEnd | date: 'MM/dd/yyyy' "></strong>
             </div>
         </div>
         <br/>
         <div>
             <input type="checkbox" pp-icheck ng-model="consentESignatureVm.patient.acceptTerms" ng-change="consentESignatureVm.onchecked()">
-            <span>I, <strong ng-bind="consentESignatureVm.patient.name"></strong>, hereby accept, and understand the terms of this consent.</span>
+            <span>I, <strong ng-bind="consentESignatureVm.attestation | fullName"></strong>, hereby accept, and understand the terms of this consent.</span>
         </div>
     </div>
     <div class="row m-b-md">
