Update the address filter to capture the right provider address fields.    Implement controller to make the esignature logic more robust in case user refreshes the page or some data are missing.
#8795 - As a patient, for signing a consent, I will be able to use a checkbox attestation feature

--- a/client/app/consent/directives/consentESignature.html
+++ b/client/app/consent/directives/consentESignature.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="col-sm-3">
                         <p>Phone</p>
-                        <p > <strong ng-bind="consentESignatureVm.authorizeProvider.mailingAddressTelephoneNumber"></strong></p>
+                        <p > <strong ng-bind="consentESignatureVm.authorizeProvider.practiceLocationAddressTelephoneNumber | phone"></strong></p>
                     </div>
                 </div>
                 <br/>
@@ -57,10 +57,10 @@
                     </div>
                     <div class="col-sm-3">
                         <p>Phone</p>
-                        <p > <strong ng-bind="consentESignatureVm.disclosureProvider.mailingAddressTelephoneNumber"></strong></p>
+                        <p > <strong ng-bind="consentESignatureVm.disclosureProvider.practiceLocationAddressTelephoneNumber | phone"></strong></p>
                     </div>
                 </div>
-            </div>;
+            </div>
         </div>
 
         <div class="row">
