Resolve issue where password is being passed as readable through the URL
#8994- As a patient, I will be able to view a segmented CCD in a user friendly way

--- a/client/app/consent/directives/consentTryPolicyDropdown.html
+++ b/client/app/consent/directives/consentTryPolicyDropdown.html
@@ -3,7 +3,7 @@
         <div class="form-group m-b-xs"><label class="col-sm-3 control-label">Document</label>
             <div class="col-sm-9">
                 <select class="form-control m-b" name="account" ng-model="tryPolicyDropdownVm.documentid">
-                    <option ng-repeat="document in tryPolicyDropdownVm.medicaldocuments" value="{{document.id}}">{{document.filename |fileName}}</option>
+                    <option ng-repeat="document in tryPolicyDropdownVm.medicaldocuments" value="{{document.id}}">{{document.name}}</option>
                 </select>
             </div>
         </div>
