Minor edit to fix spacing
#8994-display-segmented-CCDA

--- a/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
@@ -33,11 +33,11 @@
                         <td>
                             <button type="button" class="btn btn-success dark-green btn-xs btn-block"
                                     ng-click="uploadedDocumentVm.downloadFile(medicalDocument)">
-                                <span class="fa fa-download hidden-xs"></span>Download
+                                <span class="fa fa-download hidden-xs m-r-xs"></span>Download
                             </button>
                             <button type="button" class="btn btn-danger btn-xs btn-block"
                                     ng-click="uploadedDocumentVm.openDeleteMedicalDocumentModal(medicalDocument, 'sm')">
-                                <span class="fa fa-times hidden-xs"></span> Remove
+                                <span class="fa fa-times hidden-xs m-r-xs"></span> Remove
                             </button>
                         </td>
                     </tr>
