--- a/client/app/consent/directives/consentESignature.html
+++ b/client/app/consent/directives/consentESignature.html
@@ -105,7 +105,7 @@
         <div class="col-md-12">
             <div class="pull-right">
                 <button class="btn btn-white m-r" ui-sref="fe.consent.list">Cancel</button>
-                <button class="btn btn-primary dark-green" type="submit" ng-disabled="!consentESignatureVm.isAuthenticated" >Complete</button>
+                <button class="btn btn-primary dark-green" type="submit" ng-disabled="!consentESignatureVm.isAuthenticated" ng-click="consentESignatureVm.onCompleteAttestation()">Complete</button>
             </div>
         </div>
     </div>
