--- a/client/app/consent/directives/consentPreviewAttestationModal.html
+++ b/client/app/consent/directives/consentPreviewAttestationModal.html
@@ -4,14 +4,11 @@
     </div>
     <div class="modal-body">
         <div class="row">
-            <div class="col-sm-12">
-                <strong> Success in creating attested consent</strong>
+            <div class="col-sm-12 center">
+                <span> <button class="btn btn-primary dark-green"  ng-click="attestedConsentModalVm.downloadAttestedConsentAndRedirectToConsentList()">Download Attested Consent</button></span>
+                <span> <button class="btn btn-white m-r"   ui-sref="fe.consent.list">Redirect to Consent List</button> </span>
             </div>
-            <div> <button ng-click="attestedConsentModalVm.downloadAttestedConsentAndRedirectToConsentList()">Download</button>  Attested Consent</div>
-            <div> <button ng-click="attestedConsentModalVm.closeAndRedirectAndToConsentList()">Redirect</button>  to Consent List</div>
+
         </div>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-white m-r-xs" ng-click="attestedConsentModalVm.closeAndRedirectAndToConsentList()">Cancel</button>
     </div>
 </div>
