Rename the service to create the attested consent and change the request from get to post.                                                                                                                                                                                                                                                                                                #8795 - As a patient, I will no longer be required to sign a consent and now can use a checkbox to complete my attestation for creating a consent( Part 1 Consent)

--- a/client/app/consent/directives/consentESignature.html
+++ b/client/app/consent/directives/consentESignature.html
@@ -97,7 +97,7 @@
         </div>
         <br/>
         <div>
-            <input type="checkbox" pp-icheck ng-model="consentESignatureVm.patient.acceptTerms" ng-change="consentESignatureVm.onchecked()">
+            <input type="checkbox" pp-icheck ng-model="consentESignatureVm.attestation.acceptTerms" ng-change="consentESignatureVm.onchecked()">
             <span>I, <strong ng-bind="consentESignatureVm.attestation | fullName"></strong>, hereby accept, and understand the terms of this consent.</span>
         </div>
     </div>
