--- a/client/app/consent/directives/consentESignatureAuthenticateModal.html
+++ b/client/app/consent/directives/consentESignatureAuthenticateModal.html
@@ -5,7 +5,7 @@
     <div class="modal-body">
         <div class="row">
             <div class="col-sm-12">
-                <strong> Please provide you account password to authenticate, and complete e-signature</strong>
+                <strong> Please provide your account password to authenticate, and complete e-signature</strong>
             </div>
         </div>
         <div class="row">
