--- a/client/app/consent/directives/consentRevokeConfirmation.html
+++ b/client/app/consent/directives/consentRevokeConfirmation.html
@@ -1,24 +1,42 @@
 <div class="row">
-    <div class="col-sm-10 col-sm-offset-1">
-        <p>Authorized to share: <strong><span ng-bind="consentRevokeVm.params.consent.toDiscloseName"/></strong> |
-            Sharing with: <strong><span
-                    ng-bind="consentRevokeVm.params.consent.isMadeToName"/></strong> | Effective Date: <strong><span
-                    ng-bind="consentRevokeVm.params.consent.consentStart | date"/></strong></p>
+    <div class="col-sm-12">
+        <div class="row">
+            <div class="col-sm-12">
+                <h2 class="m-t-none"><strong>Withdrawal of Consent to Participate in Health Information Exchange</strong></h2>
+                <div class="">
+                    <p class="m-b-xxs">Consent Reference Number:</p>
+                    <p><strong ng-bind="consentRevokeVm.revokeAttestation.consentReferenceId"></strong></p>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <span> Patient Name:</span>
+                <strong ng-bind="consentRevokeVm.revokeAttestation.patient | fullName"></strong>
+            </div>
+            <div class="col-sm-6">
+                <span> Patient DOB:</span>
+                <strong ng-bind="consentRevokeVm.revokeAttestation.patientDateOfBirth"></strong>
+            </div>
+        </div>
+        <br/>
+
+        <div class="row">
+            <div class="col-sm-12">
+                <span class="pre-wrap" ng-bind="consentRevokeVm.revokeAttestation.consentRevokeTermsText"></span>
+            </div>
+        </div>
+
+        <br/>
+        <div>
+            <input type="checkbox" pp-icheck ng-model="consentRevokeVm.patient.acceptTerms" ng-change="consentRevokeVm.onchecked()">
+            <span>I, <strong ng-bind="consentRevokeVm.revokeAttestation.patient | fullName"></strong>, hereby accept, and understand the terms of this consent.</span>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-sm-10 col-sm-offset-1">
-        <div class="alert alert-info">Withdrawal of Consent to Participate in Health Information Exchange</div>
-    </div>
-</div>
-<div class="row m-b">
-    <div class="col-sm-10 col-sm-offset-1">
-        TEXT FROM DATABASE SHOULD BE POPULATED HERE
-    </div>
-</div>
-<div class="row m-b-md">
-    <div class="col-sm-10 col-sm-offset-1">
-        <button type="button" class="btn btn-white m-r" ng-click="consentRevokeVm.cancel()">Cancel</button>
-        <button type="button" class="btn btn-primary" ng-click="consentRevokeVm.sign()">Sign</button>
+    <div class="row m-b-md">
+        <div class="col-md-12">
+            <div class="pull-right">
+                <button class="btn btn-white m-r" ui-sref="fe.consent.list">Cancel</button>
+                <button class="btn btn-primary dark-green" type="submit" ng-disabled="!consentRevokeVm.isAuthenticated" ng-click="consentRevokeVm.onCompleteAttestation()">Complete</button>
+            </div>
+        </div>
     </div>
 </div>
