Implement password verification for consent revoke attestation
#9082:As a patient, I will no longer be required to sign a consent and now can use a checkbox to complete my attestation for revoking a consent ( Part 2 Revocation)

--- a/client/app/consent/directives/consentRevokeConfirmation.html
+++ b/client/app/consent/directives/consentRevokeConfirmation.html
@@ -27,14 +27,14 @@
 
         <br/>
         <div>
-            <input type="checkbox" pp-icheck ng-model="consentRevokeVm.patient.acceptTerms" ng-change="consentRevokeVm.onchecked()">
+            <input type="checkbox" pp-icheck ng-model="consentRevokeVm.revokeAttestation.acceptTerms" ng-change="consentRevokeVm.onchecked()">
             <span>I, <strong ng-bind="consentRevokeVm.revokeAttestation.patient | fullName"></strong>, hereby accept, and understand the terms of this consent.</span>
         </div>
     </div>
     <div class="row m-b-md">
         <div class="col-md-12">
             <div class="pull-right">
-                <button class="btn btn-white m-r" ui-sref="fe.consent.list">Cancel</button>
+                <button class="btn btn-white m-r" ng-click="consentRevokeVm.cancel()">Cancel</button>
                 <button class="btn btn-primary dark-green" type="submit" ng-disabled="!consentRevokeVm.isAuthenticated" ng-click="consentRevokeVm.onCompleteAttestation()">Complete</button>
             </div>
         </div>
