Implement sign feature for consent revocation attestation
#9082:As a patient, I will no longer be required to sign a consent and now can use a checkbox to complete my attestation for revoking a consent ( Part 2 Revocation)

--- a/client/app/consent/directives/consentRevokeConfirmation.html
+++ b/client/app/consent/directives/consentRevokeConfirmation.html
@@ -35,7 +35,7 @@
         <div class="col-md-12">
             <div class="pull-right">
                 <button class="btn btn-white m-r" ng-click="consentRevokeVm.cancel()">Cancel</button>
-                <button class="btn btn-primary dark-green" type="submit" ng-disabled="!consentRevokeVm.isAuthenticated" ng-click="consentRevokeVm.onCompleteAttestation()">Complete</button>
+                <button class="btn btn-primary dark-green" type="submit" ng-disabled="!consentRevokeVm.isAuthenticated" ng-click="consentRevokeVm.sign()">Complete</button>
             </div>
         </div>
     </div>
