Change the label to continue in the modal after attesting my consent.                                                                                                                                                                                                                                                                                                  #8795 - As a patient, I will no longer be required to sign a consent and now can use a checkbox to complete my attestation for creating a consent( Part 1 Consent)

--- a/client/app/consent/directives/consentPreviewAttestationModal.html
+++ b/client/app/consent/directives/consentPreviewAttestationModal.html
@@ -5,8 +5,12 @@
     <div class="modal-body">
         <div class="row">
             <div class="col-sm-12 center">
-                <span> <button class="btn btn-primary dark-green"  ng-click="attestedConsentModalVm.downloadAttestedConsentAndRedirectToConsentList()">Download Attested Consent</button></span>
-                <span> <button class="btn btn-white m-r"   ui-sref="fe.consent.list">Redirect to Consent List</button> </span>
+                <span>
+                    <button class="btn btn-primary dark-green"  ng-click="attestedConsentModalVm.downloadAttestedConsentAndRedirectToConsentList()">
+                        Download Attested Consent
+                    </button>
+                </span>
+                <span> <button class="btn btn-white m-r"   ui-sref="fe.consent.list">Continue</button> </span>
             </div>
 
         </div>
