Fix the activity table header name tipo.                                                                                                                                                                                                                                                                                                  #9174 - As a patient, I will have access to my activity history, so that I can view my activity trail within the system

--- a/client/app/activity/directives/activity.html
+++ b/client/app/activity/directives/activity.html
@@ -10,7 +10,7 @@
                         <thead>
                         <tr>
                             <th>Date</th>
-                            <th>Acton</th>
+                            <th>Action</th>
                             <th>Type</th>
                             <th>Changed by</th>
                         </tr>
