Get the audit history data from the api.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      #8795 - As a patient, I will no longer be required to sign a consent and now can use a checkbox to complete my attestation for creating a consent( Part 1 Consent)

--- a/client/app/activity/directives/activity.html
+++ b/client/app/activity/directives/activity.html
@@ -17,10 +17,10 @@
                         </thead>
                         <tbody>
                         <tr ng-repeat="activity in activityVm.activities" >
-                            <td ></td>
-                            <td > </span></td>
-                            <td > </span></td>
-                            <td > </span></td>
+                            <td > <span ng-bind="activity.timestamp"></span></td>
+                            <td > <span ng-bind="activity.recType"></span></span></td>
+                            <td > <span ng-bind="activity.type"></span></span></td>
+                            <td > <span ng-bind="activity.changedBy"></span></span></td>
                         </tr>
                         </tbody>
                     </table>
