Enable to route to forgotPassword page
#9174 - As a patient, I will have access to my activity history, so that I can view my activity trail within the system

--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -30,7 +30,7 @@
                                         <mhc-oauth-login></mhc-oauth-login>
                                     </div>
                                     <div class="text-center">
-                                        <a href="#"><small>Forget Password?</small></a>
+                                        <a ng-click="loginVm.forgotPassword()"><small>Forget Password?</small></a>
                                         <p> Version: {{::loginVm.version}} </p>
                                     </div>
                                 </div>
