--- a/client/app/account/controllers/forgotPassword.html
+++ b/client/app/account/controllers/forgotPassword.html
@@ -1,4 +1,8 @@
 <div id="wrapper" class="container-fluid page-bg-white">
+    <script type="text/ng-template" id="forgot-password-messages">
+        <div ng-message="required">Please complete this required fields.</div>
+    </script>
+
     <nav class="navbar navbar-fixed-top height-60 gray-bg border-bottom" role="navigation">
         <div class="container-fluid">
             <div class="row">
@@ -45,10 +49,10 @@
                                         <div class="col-xs-8 col-sm-5 col-md-4 col-lg-3 m-b-xs">
                                             <input id="email" name="email" class="form-control" type="text"
                                                    placeholder="Email"
-                                                   ng-model="verificationVm.verifyInfo.verificationCode" required/>
-                                            <div class="text-alert" ng-messages="verificationForm.verificationCode.$error"
-                                                 ng-if="verificationForm.verificationCode.$dirty">
-                                                <div ng-messages-include="verification-messages"></div>
+                                                   ng-model="forgotPasswordVm.user.email" required/>
+                                            <div class="text-alert" ng-messages="forgotPasswordForm.email.$error"
+                                                 ng-if="forgotPasswordForm.email.$dirty">
+                                                <div ng-messages-include="forgot-password-messages"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -56,7 +60,7 @@
                             </div>
 
                             <div class="row">
-                                <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="verificationVm.verifyError">
+                                <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="forgotPasswordVm.validEmailError">
                                     <span>Please provide a valid email address.</span>
                                 </div>
                             </div>
@@ -66,8 +70,8 @@
                                     <button type="button" class="btn btn-white m-r"
                                             ng-click="forgotPasswordVm.cancel()">Cancel
                                     </button>
-                                    <a class="btn btn-primary dark-green" ng-click="verificationVm.verify()"
-                                       ng-disabled="!verificationVm.canVerify(verificationForm)">Submit
+                                    <a class="btn btn-primary dark-green" ng-click="forgotPasswordVm.forgotPassword()"
+                                       ng-disabled="!forgotPasswordVm.canSubmit(forgotPasswordForm)">Submit
                                     </a>
                                 </div>
                             </div>
