--- a/client/app/account/controllers/forgotPassword.html
+++ b/client/app/account/controllers/forgotPassword.html
@@ -1,6 +1,7 @@
 <div id="wrapper" class="container-fluid page-bg-white">
     <script type="text/ng-template" id="forgot-password-messages">
         <div ng-message="required">Please complete this required fields.</div>
+        <div ng-message="email">The email address you have provided must be valid, please try again.</div>
     </script>
 
     <nav class="navbar navbar-fixed-top height-60 gray-bg border-bottom" role="navigation">
@@ -49,7 +50,7 @@
                                         <div class="col-xs-8 col-sm-5 col-md-4 col-lg-3 m-b-xs">
                                             <input id="email" name="email" class="form-control" type="text"
                                                    placeholder="Email"
-                                                   ng-model="forgotPasswordVm.user.email" required/>
+                                                   ng-model="forgotPasswordVm.user.email" c2s-validate-email required/>
                                             <div class="text-alert" ng-messages="forgotPasswordForm.email.$error"
                                                  ng-if="forgotPasswordForm.email.$dirty">
                                                 <div ng-messages-include="forgot-password-messages"></div>
@@ -60,7 +61,7 @@
                             </div>
 
                             <div class="row">
-                                <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="forgotPasswordVm.validEmailError">
+                                <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="forgotPasswordVm.emailPatternError">
                                     <span>Please provide a valid email address.</span>
                                 </div>
                             </div>
