--- a/client/app/account/controllers/forgotPassword.html
+++ b/client/app/account/controllers/forgotPassword.html
@@ -66,6 +66,12 @@
                                 </div>
                             </div>
 
+                            <div class="row">
+                                <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="forgotPasswordVm.emailNotFound">
+                                    <span>The email address you have provided cannot be found, please try again.</span>
+                                </div>
+                            </div>
+
                             <div class="form-group">
                                 <div class="col-sm-12 m-t-sm">
                                     <button type="button" class="btn btn-white m-r"
