--- a/client/app/activity/controllers/activityHistory.html
+++ b/client/app/activity/controllers/activityHistory.html
@@ -1,3 +1,3 @@
 <pp-content-wrapper contenttitle="Activity History">
-    <pp-activity activities="activityHistoryVm.auditHistory"></pp-activity>
+    <pp-activity activities="activityHistoryVm.activityHistory"></pp-activity>
 </pp-content-wrapper>
