Implement a brand module and integrat it with the app.
#9398 - As a developer, I will have replaced all references of MHC appearing in the UI, with Consent 2 Share

--- a/client/app/account/controllers/forgotPassword.html
+++ b/client/app/account/controllers/forgotPassword.html
@@ -4,29 +4,7 @@
         <div ng-message="email">The email address you have provided must be valid, please try again.</div>
     </script>
 
-    <nav class="navbar navbar-fixed-top height-60 gray-bg border-bottom" role="navigation">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="navbar-header">
-                        <div class="m-t-md m-l inline">
-                            <p>C2S Forgot Password</p>
-                        </div>
-                    </div>
-                    <div class="pull-right">
-                        <div class="m-t-md m-r inline">
-                            <p>
-                                Welcome
-                            </p>
-                        </div>
-                        <div class="m-t-xs m-r inline">
-                            <img src="assets/img/mhc_grey.png" alt="mhc logo grey" height="40px">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <mhc-unsecure-top-navbar title="forgotPasswordVm.title"></mhc-unsecure-top-navbar>
 
     <div id="page-wrapper " class="padding-top-60 m-b-lg m-l-none m-r-none">
         <section>
