--- a/client/app/account/directives/oauthLogin.html
+++ b/client/app/account/directives/oauthLogin.html
@@ -1,6 +1,6 @@
 <form class="form-horizontal" name="loginForm">
     <fieldset>
-        <legend class="alert alert-success center p-xs">Log in with your MHC account</legend>
+        <legend class="alert alert-success center p-xs">Log in with your <span ng-bind="loginVm.brand"></span> account</legend>
         <div class="form-group">
             <label for="email" class="col-sm-2 control-label">Username:</label>
             <div class="col-sm-10">
