--- a/client/app/account/controllers/activationSuccess.html
+++ b/client/app/account/controllers/activationSuccess.html
@@ -1,27 +1,5 @@
 <div id="wrapper" class="container-fluid page-bg-white">
-    <nav class="navbar navbar-fixed-top height-60 gray-bg border-bottom" role="navigation">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-sm-12">
-                    <div class="navbar-header">
-                        <div class="m-t-md m-l inline">
-                            <p>MHC Account Activation Complete</p>
-                        </div>
-                    </div>
-                    <div class="pull-right">
-                        <div class="m-t-md m-r inline">
-                            <p>
-                                Welcome
-                            </p>
-                        </div>
-                        <div class="m-t-xs m-r inline">
-                            <img src="assets/img/mhc_grey.png" alt="mhc logo grey" height="40px">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <mhc-unsecure-top-navbar title="activateVm.title"></mhc-unsecure-top-navbar>
 
     <div id="page-wrapper "class="padding-top-60 m-b-lg m-l-none m-r-none">
 
