--- a/client/app/home/controllers/home.html
+++ b/client/app/home/controllers/home.html
@@ -11,7 +11,7 @@
         <div class="col-sm-12" >
             <div class="alert alert-success alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <strong>Welcome to My Health Compass! You are now ready to access and view your health information.</strong>
+                <strong>Welcome to <span ng-bind="homeVm.brandName"></span>! You are now ready to access and view your health information.</strong>
             </div>
         </div>
     </div>
