Update the field in activity history response
#9174 - As a patient, I will have access to my activity history, so that I can view my activity trail within the system

--- a/client/app/activity/directives/activity.html
+++ b/client/app/activity/directives/activity.html
@@ -17,7 +17,7 @@
                         </thead>
                         <tbody>
                         <tr ng-repeat="activity in activityVm.activities" >
-                            <td > <span ng-bind="activity.timestamp"></span></td>
+                            <td > <span ng-bind="activity.changedDateTime"></span></td>
                             <td > <span ng-bind="activity.recType"></span></span></td>
                             <td > <span ng-bind="activity.type"></span></span></td>
                             <td > <span ng-bind="activity.changedBy"></span></span></td>
