Replace MHC logo with Consent2share logo.
 #9398 - As a developer, I will have replaced all references of MHC appearing in the UI, with Consent 2 Share

--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="pull-left login-logo">
-                            <img src="assets/img/mhc_white.png" alt="loginVm.altLogoText">
+                            <img src="assets/img/c2s_250x50.png" style="width: 50%" alt="loginVm.altLogoText">
                         </div>
                         <div class="pull-right info-link">
                             <span class="side-padding10">HOME</span> <span>ABOUT</span>
