--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -4,11 +4,11 @@
             <div class="custom-header modified">
                 <div class="row">
                     <div class="col-sm-12">
-                        <div class="pull-left login-logo">
-                            <img src="assets/img/c2s_250x50.png" style="width: 50%" alt="loginVm.altLogoText">
-                        </div>
-                        <div class="pull-right info-link">
-                            <span class="side-padding10">HOME</span> <span>ABOUT</span>
+                        <div class="m-t m-l-sm">
+                            <img src="assets/img/consent2share_white.png" class="c2sLoginLogo" alt="loginVm.altLogoText">
+                            <span class="pull-right m-r-md m-t-xs">
+                                <span class="side-padding10">HOME</span> <span>ABOUT</span>
+                            </span>
                         </div>
                     </div>
                 </div>
