--- a/client/app/account/directives/topNavbar.html
+++ b/client/app/account/directives/topNavbar.html
@@ -10,12 +10,10 @@
                 </div>
                 <div class="pull-right">
                     <div class="m-t-md m-r inline">
-                        <p>
-                            Welcome
-                        </p>
+                        <p></p>
                     </div>
                     <div class="m-t-xs m-r inline">
-                        <img src="assets/img/mhc_grey.png" alt="mhc logo grey" height="40px">
+                        <img src="assets/img/c2s.png" alt="c2s logo">
                     </div>
                 </div>
             </div>
