Remove showHealthInformationMenu variable and make Health Information always visible in side nav bar
#9745 - C2S v2 :: Patient Portal :: 'Health Information' does not appear in the left side navigation until the user clicks on the 'My Health Information' button on the home page.

--- a/client/app/home/controllers/home.html
+++ b/client/app/home/controllers/home.html
@@ -21,7 +21,7 @@
 
                 <br>
                 <p>
-                    <a class="btn btn-primary dark-green" ui-sref="fe.patient.healthinformation({scrollTo:'none',expand:'none' })" ng-click="AppVm.showHealthInformationMenu()">
+                    <a class="btn btn-primary dark-green" ui-sref="fe.patient.healthinformation({scrollTo:'none',expand:'none' })">
                         <span class="hidden-xs">My </span>Health Information
                     </a>
                 </p>
