Change the reference name to Consent2share in account activation success page
#9908 - C2S v2 :: Account activation Complete :: still have reference to MHC

--- a/client/app/account/controllers/activationSuccess.html
+++ b/client/app/account/controllers/activationSuccess.html
@@ -10,7 +10,7 @@
                     <strong>Congratulations!
                         <span ng-bind="activateVm.patientName"></span>
                     </strong>
-                    You have successfully created your MyHealthCompass password. Click
+                    You have successfully created your <span ng-bind="activateVm.brandName"></span> password. Click
                     on the link below to log in to your account.
                 </div>
             </div>
