Add Arizona state option in provider lookup state dropdown
#9513:As a developer, I will have integrated Consent2Share ACS with Mirth Results Plugin for Access Control and Data Segmentation [Task 5]

--- a/client/app/provider/directives/provider-lookup-search.html
+++ b/client/app/provider/directives/provider-lookup-search.html
@@ -32,6 +32,7 @@
                                             ng-disabled="providerLookupSearchVm.formViewValue(providerSearchForm, 'providerZipCode')"
                                             ng-required="!providerLookupSearchVm.plsQueryParameters.zipcode">
                                         <option value="">-- Please Select --</option>
+                                        <option value="AZ">ARIZONA</option>
                                         <option value="DC">DISTRICT OF COLUMBIA</option>
                                         <option value="MD">MARYLAND</option>
                                         <option value="VA">VIRGINIA</option>
