Implement function to publish document.
#9976 - As a developer, I will have implemented an interface feature to publish CCD documents to HIEOS

--- a/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
@@ -35,6 +35,10 @@
                                     ng-click="uploadedDocumentVm.downloadFile(medicalDocument)">
                                 <span class="fa fa-download hidden-xs m-r-xs"></span>Download
                             </button>
+                            <button type="button" class="btn btn-success dark-green btn-xs btn-block"
+                                    ng-click="uploadedDocumentVm.uploadDocumentToHIEOS(medicalDocument)">
+                                <span class="fa fa-upload hidden-xs m-r-xs"></span>Upload
+                            </button>
                             <button type="button" class="btn btn-danger btn-xs btn-block"
                                     ng-click="uploadedDocumentVm.openDeleteMedicalDocumentModal(medicalDocument, 'sm')">
                                 <span class="fa fa-times hidden-xs m-r-xs"></span> Remove
